--- a/app/Views/home.twig
+++ b/app/Views/home.twig
@@ -13,6 +13,55 @@
 				{{ reverse }}
 			</span>
 
+			<div class="my-4 mx-auto text-start" style="max-width: 350px;">
+				<div class="text-center">
+					<span class="h5">API</span>
+				</div>
+
+				<table class="table table-api">
+					<tr>
+						<td>
+							<code>Get IP address in plaintext</code>
+						</td>
+						<td>
+							<code>
+								<a target="_blank" href="/ip">/ip</a>
+							</code>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<code>Get reverse DNS in plaintext</code>
+						</td>
+						<td>
+							<code>
+								<a target="_blank" href="/reverse">/reverse</a>
+							</code>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<code>Get data in JSON format</code>
+						</td>
+						<td>
+							<code>
+								<a target="_blank" href="/json">/json</a>
+							</code>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<code>Get data in XML format</code>
+						</td>
+						<td>
+							<code>
+								<a target="_blank" href="/xml">/xml</a>
+							</code>
+						</td>
+					</tr>
+				</table>
+			</div>
+
 			<footer class="mt-4 text-center text-muted">
 				<i class="fa-solid fa-code me-1"></i>
 				<a target="blank" href="https://bzrn.ch">
