--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -12,3 +12,11 @@ footer a:hover,
 footer a:active {
 	color: #fff;
 }
+
+.table-api td {
+	padding: 0;
+}
+
+.table-api tr {
+	border-color: transparent;
+}
