--- a/app/Views/home.twig
+++ b/app/Views/home.twig
@@ -87,7 +87,8 @@
 {% if background is not null %}
 <style>
 	body {
-		background-image: url({{ background.url }});
+		background: url('{{ background.url|raw }}') no-repeat center center fixed;
+		background-size: cover;
 	}
 </style>
 {% else %}
