--- a/app/Views/home.twig
+++ b/app/Views/home.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block content %}	
-<div class="card mt-5 mx-auto bg-dark" style="max-width: 700px;">
+<div class="card mx-auto bg-dark" style="max-width: 700px;">
 	<div class="card-body text-light text-center">
 		<h5 class="card-title">My IP address</h5>
 		<div class="card-text mt-4">
