--- a/app/Views/layout.twig
+++ b/app/Views/layout.twig
@@ -23,7 +23,7 @@
 </head>
 <body>
 	{% block body %}
-		<div class="container">
+		<div class="container pt-5">
 			{% block content %}{% endblock %}
 		</div>
 	{% endblock %}
